--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": "^18.15.0",
     "nodemailer": "^6.9.4",
     "nodemailer-express-handlebars": "^6.1.0",
+    "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "path-to-regexp": "^6.2.1",
     "sharp": "^0.33.4",
