--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
             npm install
             npm rebuild bcrypt --build-from-source
             npx prisma generate
+            pm2 restart server.js
             pm2 delete happy-backend || true
             AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }} \
             AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
